--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="pill active" data-tab="about">about</div>
       <div class="pill" data-tab="settings">settings</div>
     </div>
-    <div id="tab-contents"><p>no rules other than no NSFW content (subscribe to vgti2018 on yt and like all his videos or else im gonna steal your toilet)  www.youtube.com/@VGTI2018</p></div>
+    <div id="tab-contents"><p>no rules other than no nsfw content</p></div>
     <div class="pill" id="themeSwitch"></div>
   </aside>
   <main id="main">
